library/general/uniqueingresshost/example1.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-host1
spec:
  rules:
  - host: example-host.example.com
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
  - host: example-host2.example.com
    http:
      paths:
      - backend:
          serviceName: nginx2
          servicePort: 80
