library/general/uniqueingresshost/example2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-host2
spec:
  rules:
  - host: example-host.example.com
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
  - host: example-host1.example.com
    http:
      paths:
      - backend:
          serviceName: nginx2
          servicePort: 80
